# qwfwd

./: .gitignore  .travis.yml  ABOUT  CMakeLists.txt  CREDITS  EXAMPLE_qwfwd.cfg  Makefile.BSD  Makefile.GNU  README.md  ban.c  configure  info.c  main.c  meson.build  peer.c  qwfwd.cfg  qwfwd.h  qwfwd.vcproj  qwfwd_builds.key.enc  requirements.txt  svc.c  sys.c
.github/workflows/: build-all-targets.yml  build-and-deploy-release.yml  build-and-deploy-snapshot.yml  build-targets-cmake.yml  build-targets.yml
resources/example-configs/: qwfwd.cfg
src/: clc.c  main.c  net.c  peer.c  query.c  qwfwd.h  svc.c  sys.c  whitelist.c
tools/cross-compilation/: linux-aarch64.txt
